--- a/Scripts to Derive Tables (Python)/code.ipynb
+++ b/Scripts to Derive Tables (Python)/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    df = pd.read_csv('sales_data_sample.csv', encoding='utf-8')\n",
+    "    df = pd.read_csv('..\\data\\sales_data_sample.csv', encoding='utf-8')\n",
     "except UnicodeDecodeError:\n",
     "    try:\n",
-    "        df = pd.read_csv('sales_data_sample.csv', encoding='ISO-8859-1')\n",
+    "        df = pd.read_csv('..\\data\\sales_data_sample.csv', encoding='ISO-8859-1')\n",
     "    except UnicodeDecodeError:\n",
-    "        df = pd.read_csv('sales_data_sample.csv', encoding='cp1252')\n"
+    "        df = pd.read_csv('..\\data\\sales_data_sample.csv', encoding='cp1252')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,18 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "customer = df[['CUSTOMERNAME', 'PHONE','CONTACTLASTNAME', 'CONTACTFIRSTNAME','ADDRESSLINE1', 'ADDRESSLINE2', 'CITY', 'STATE', 'POSTALCODE', 'COUNTRY', 'TERRITORY']].drop_duplicates()\n",
+    "customer['CUSTOMER_ID'] = ['C' + str(i) for i in range(1, len(customer) + 1)]\n",
+    "df_m = pd.merge(df_m, customer, on=['CUSTOMERNAME', 'PHONE','CONTACTLASTNAME', 'CONTACTFIRSTNAME','ADDRESSLINE1', 'ADDRESSLINE2', 'CITY', 'STATE', 'POSTALCODE', 'COUNTRY', 'TERRITORY'], how='left')\n",
     "\n",
     "customer = pd.merge(customer, location, on=['ADDRESSLINE1', 'ADDRESSLINE2', 'CITY', 'STATE', 'POSTALCODE', 'COUNTRY', 'TERRITORY'], how='left')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +657,7 @@
        "[2823 rows x 9 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -694,8 +696,15 @@
        "      <th>PHONE</th>\n",
        "      <th>CONTACTLASTNAME</th>\n",
        "      <th>CONTACTFIRSTNAME</th>\n",
-       "      <th>LOCATION_ID</th>\n",
+       "      <th>ADDRESSLINE1</th>\n",
+       "      <th>ADDRESSLINE2</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>POSTALCODE</th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>TERRITORY</th>\n",
        "      <th>CUSTOMER_ID</th>\n",
+       "      <th>LOCATION_ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -705,8 +714,15 @@
        "      <td>2125557818</td>\n",
        "      <td>Yu</td>\n",
        "      <td>Kwai</td>\n",
-       "      <td>L1</td>\n",
+       "      <td>897 Long Airport Avenue</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NYC</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>10022</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>C1</td>\n",
+       "      <td>L1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -714,8 +730,15 @@
        "      <td>26.47.1555</td>\n",
        "      <td>Henriot</td>\n",
        "      <td>Paul</td>\n",
-       "      <td>L2</td>\n",
+       "      <td>59 rue de l'Abbaye</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>51100</td>\n",
+       "      <td>France</td>\n",
+       "      <td>EMEA</td>\n",
        "      <td>C2</td>\n",
+       "      <td>L2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -723,8 +746,15 @@
        "      <td>+33 1 46 62 7555</td>\n",
        "      <td>Da Cunha</td>\n",
        "      <td>Daniel</td>\n",
-       "      <td>L3</td>\n",
+       "      <td>27 rue du Colonel Pierre Avia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75508</td>\n",
+       "      <td>France</td>\n",
+       "      <td>EMEA</td>\n",
        "      <td>C3</td>\n",
+       "      <td>L3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -732,8 +762,15 @@
        "      <td>6265557265</td>\n",
        "      <td>Young</td>\n",
        "      <td>Julie</td>\n",
-       "      <td>L4</td>\n",
+       "      <td>78934 Hillside Dr.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pasadena</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>90003</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>C4</td>\n",
+       "      <td>L4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -741,8 +778,15 @@
        "      <td>6505551386</td>\n",
        "      <td>Brown</td>\n",
        "      <td>Julie</td>\n",
-       "      <td>L5</td>\n",
+       "      <td>7734 Strong St.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>C5</td>\n",
+       "      <td>L5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -752,88 +796,156 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>483</th>\n",
+       "      <th>87</th>\n",
        "      <td>Australian Collectables, Ltd</td>\n",
        "      <td>61-9-3844-6555</td>\n",
        "      <td>Connery</td>\n",
        "      <td>Sean</td>\n",
-       "      <td>L88</td>\n",
+       "      <td>7 Allen Street</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Glen Waverly</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>3150</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>APAC</td>\n",
        "      <td>C88</td>\n",
+       "      <td>L88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>554</th>\n",
+       "      <th>88</th>\n",
        "      <td>Gift Ideas Corp.</td>\n",
        "      <td>2035554407</td>\n",
        "      <td>Lewis</td>\n",
        "      <td>Dan</td>\n",
-       "      <td>L89</td>\n",
+       "      <td>2440 Pompton St.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Glendale</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>97561</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>C89</td>\n",
+       "      <td>L89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>567</th>\n",
+       "      <th>89</th>\n",
        "      <td>Bavarian Collectables Imports, Co.</td>\n",
        "      <td>+49 89 61 08 9555</td>\n",
        "      <td>Donnermeyer</td>\n",
        "      <td>Michael</td>\n",
-       "      <td>L90</td>\n",
+       "      <td>Hansastr. 15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Munich</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80686</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>EMEA</td>\n",
        "      <td>C90</td>\n",
+       "      <td>L90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>571</th>\n",
+       "      <th>90</th>\n",
        "      <td>Royale Belge</td>\n",
        "      <td>(071) 23 67 2555</td>\n",
        "      <td>Cartrain</td>\n",
        "      <td>Pascale</td>\n",
-       "      <td>L91</td>\n",
+       "      <td>Boulevard Tirou, 255</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Charleroi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B-6000</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>EMEA</td>\n",
        "      <td>C91</td>\n",
+       "      <td>L91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>937</th>\n",
+       "      <th>91</th>\n",
        "      <td>Auto-Moto Classics Inc.</td>\n",
        "      <td>6175558428</td>\n",
        "      <td>Taylor</td>\n",
        "      <td>Leslie</td>\n",
-       "      <td>L92</td>\n",
+       "      <td>16780 Pompton St.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Brickhaven</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>58339</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>C92</td>\n",
+       "      <td>L92</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>92 rows × 6 columns</p>\n",
+       "<p>92 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           CUSTOMERNAME              PHONE CONTACTLASTNAME  \\\n",
-       "0                     Land of Toys Inc.         2125557818              Yu   \n",
-       "1                    Reims Collectables         26.47.1555         Henriot   \n",
-       "2                       Lyon Souveniers   +33 1 46 62 7555        Da Cunha   \n",
-       "3                     Toys4GrownUps.com         6265557265           Young   \n",
-       "4              Corporate Gift Ideas Co.         6505551386           Brown   \n",
-       "..                                  ...                ...             ...   \n",
-       "483        Australian Collectables, Ltd     61-9-3844-6555         Connery   \n",
-       "554                    Gift Ideas Corp.         2035554407           Lewis   \n",
-       "567  Bavarian Collectables Imports, Co.  +49 89 61 08 9555     Donnermeyer   \n",
-       "571                        Royale Belge   (071) 23 67 2555        Cartrain   \n",
-       "937             Auto-Moto Classics Inc.         6175558428          Taylor   \n",
+       "                          CUSTOMERNAME              PHONE CONTACTLASTNAME  \\\n",
+       "0                    Land of Toys Inc.         2125557818              Yu   \n",
+       "1                   Reims Collectables         26.47.1555         Henriot   \n",
+       "2                      Lyon Souveniers   +33 1 46 62 7555        Da Cunha   \n",
+       "3                    Toys4GrownUps.com         6265557265           Young   \n",
+       "4             Corporate Gift Ideas Co.         6505551386           Brown   \n",
+       "..                                 ...                ...             ...   \n",
+       "87        Australian Collectables, Ltd     61-9-3844-6555         Connery   \n",
+       "88                    Gift Ideas Corp.         2035554407           Lewis   \n",
+       "89  Bavarian Collectables Imports, Co.  +49 89 61 08 9555     Donnermeyer   \n",
+       "90                        Royale Belge   (071) 23 67 2555        Cartrain   \n",
+       "91             Auto-Moto Classics Inc.         6175558428          Taylor   \n",
        "\n",
-       "    CONTACTFIRSTNAME LOCATION_ID CUSTOMER_ID  \n",
-       "0               Kwai          L1          C1  \n",
-       "1               Paul          L2          C2  \n",
-       "2             Daniel          L3          C3  \n",
-       "3              Julie          L4          C4  \n",
-       "4              Julie          L5          C5  \n",
-       "..               ...         ...         ...  \n",
-       "483             Sean         L88         C88  \n",
-       "554              Dan         L89         C89  \n",
-       "567          Michael         L90         C90  \n",
-       "571          Pascale         L91         C91  \n",
-       "937           Leslie         L92         C92  \n",
+       "   CONTACTFIRSTNAME                   ADDRESSLINE1 ADDRESSLINE2  \\\n",
+       "0              Kwai        897 Long Airport Avenue          NaN   \n",
+       "1              Paul             59 rue de l'Abbaye          NaN   \n",
+       "2            Daniel  27 rue du Colonel Pierre Avia          NaN   \n",
+       "3             Julie             78934 Hillside Dr.          NaN   \n",
+       "4             Julie                7734 Strong St.          NaN   \n",
+       "..              ...                            ...          ...   \n",
+       "87             Sean                 7 Allen Street          NaN   \n",
+       "88              Dan               2440 Pompton St.          NaN   \n",
+       "89          Michael                   Hansastr. 15          NaN   \n",
+       "90          Pascale           Boulevard Tirou, 255          NaN   \n",
+       "91           Leslie              16780 Pompton St.          NaN   \n",
        "\n",
-       "[92 rows x 6 columns]"
+       "             CITY     STATE POSTALCODE    COUNTRY TERRITORY CUSTOMER_ID  \\\n",
+       "0             NYC        NY      10022        USA       NaN          C1   \n",
+       "1           Reims       NaN      51100     France      EMEA          C2   \n",
+       "2           Paris       NaN      75508     France      EMEA          C3   \n",
+       "3        Pasadena        CA      90003        USA       NaN          C4   \n",
+       "4   San Francisco        CA        NaN        USA       NaN          C5   \n",
+       "..            ...       ...        ...        ...       ...         ...   \n",
+       "87   Glen Waverly  Victoria       3150  Australia      APAC         C88   \n",
+       "88       Glendale        CT      97561        USA       NaN         C89   \n",
+       "89         Munich       NaN      80686    Germany      EMEA         C90   \n",
+       "90      Charleroi       NaN     B-6000    Belgium      EMEA         C91   \n",
+       "91     Brickhaven        MA      58339        USA       NaN         C92   \n",
+       "\n",
+       "   LOCATION_ID  \n",
+       "0           L1  \n",
+       "1           L2  \n",
+       "2           L3  \n",
+       "3           L4  \n",
+       "4           L5  \n",
+       "..         ...  \n",
+       "87         L88  \n",
+       "88         L89  \n",
+       "89         L90  \n",
+       "90         L91  \n",
+       "91         L92  \n",
+       "\n",
+       "[92 rows x 13 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1147,7 @@
        "[92 rows x 8 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1288,7 @@
        "[109 rows x 4 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1453,7 @@
        "[255 rows x 6 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
